--- a/trunk/src/main/webapp/Aggredata.html
+++ b/trunk/src/main/webapp/Aggredata.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2011. The Energy Detective. All Rights Reserved
+  ~ Copyright (c) 2012. The Energy Detective. All Rights Reserved
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -23,5 +23,14 @@
 <body>
 <script type="text/javascript" language="javascript" src="Aggredata.nocache.js"></script>
 <h1>Aggredata Application</h1>
+
+<center>
+    <table style="width:1024px;height:780px" align="center">
+        <tr>
+            <td style="width:1024px;height:780px" id="aggredataSlot"></td>
+        </tr>
+    </table>
+</center>
+
 </body>
 </html>
