Updated background image for new product look

--- a/trunk/src/main/webapp/AggreData.html
+++ b/trunk/src/main/webapp/AggreData.html
@@ -18,6 +18,8 @@
 <html>
 <head>
     <title>AggreData</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <style>
         table#applicationTable
         {
@@ -28,20 +30,12 @@
             padding:0;
             margin:0;
         }
-        #content_wrap {
-            width: 100%;
-            min-height: 640px;
-            margin: 0px;
-            padding: 0px;
-            padding-bottom: 40px;
-            background: #000 url(images/content_bottom.png) bottom left repeat-x;
-            background-position: bottom !important;
-        }
+
     </style>
+    <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
 </head>
 <body>
 
-    <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
     <table class="applicationTable" style="width:1024px;height:780px" align="center">
         <tr>
             <td style="width:1024px;height:780px" id="aggreDataSlot"></td>
