Modified layout implementation. Added panel switching.

--- a/trunk/src/main/webapp/AggreData.html
+++ b/trunk/src/main/webapp/AggreData.html
@@ -18,29 +18,29 @@
 <html>
 <head>
     <title>AggreData</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <style>
-        table#applicationTable
-        {
-            width:1024px;
-            height:768px;
+
+        table#applicationTable {
+            width: 1024px;
+            height: 768px;
             border-collapse: collapse;
             border: 0px solid #cccc00;
-            padding:0;
-            margin:0;
+            padding: 0;
+            margin: 0;
         }
 
     </style>
     <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
 </head>
 <body>
-
+<center>
     <table class="applicationTable" style="width:1024px;height:780px" align="center">
         <tr>
             <td style="width:1024px;height:780px" id="aggreDataSlot"></td>
         </tr>
     </table>
-
+</center>
 </body>
 </html>
