Renaming files to fix a gwt case issue

--- a/trunk/src/main/webapp/index.html
+++ b/trunk/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 
 <html>
 <head>
-    <title>AggreData</title>
+    <title>Aggredata</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <LINK href="AggreData.css" rel="stylesheet" type="text/css">
