Added side panel widgets for graphing and event handlers for changes.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,9 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <LINK href="Aggredata.css" rel="stylesheet" type="text/css">
+    <LINK href="DatePicker.css" rel="stylesheet" type="text/css">
+    <meta name="gwt:property" content="locale=en">
+
 
     <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
 </head>
