--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   ~ Copyright (c) 2012. The Energy Detective. All Rights Reserved
   ~
@@ -17,23 +18,25 @@
 
 <html>
 <head>
+    <!-- Mimic Internet Explorer 7 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" >
     <title>Aggredata</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <LINK href="Aggredata.css" rel="stylesheet" type="text/css">
     <LINK href="DatePicker.css" rel="stylesheet" type="text/css">
     <meta name="gwt:property" content="locale=en">
-
-
     <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
 </head>
 <body>
+<div style="text-align: center; vertical-align: top">
 <center>
-    <table class="applicationTable" style="width:1024px;height:780px" align="center">
-        <tr>
-            <td style="width:1024px;height:780px" id="appcontent"></td>
+    <table class="applicationTable" style="width:1024px;height:780px;vertical-align: top" align="center">
+        <tr style="vertical-align: top">
+            <td style="vertical-align: top" id="appcontent"></td>
         </tr>
     </table>
 </center>
+</div>
 </body>
 </html>
