Upgraded to 1.1 version of Google Charts Added totals to graph page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,7 @@
 <html>
 <head>
     <!-- Mimic Internet Explorer 7 -->
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" >
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" > -->
     <title>Aggredata</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
@@ -27,6 +27,7 @@
     <LINK href="DatePicker.css" rel="stylesheet" type="text/css">
     <meta name="gwt:property" content="locale=en">
     <script type="text/javascript" language="javascript" src="Aggredata/Aggredata.nocache.js"></script>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 </head>
 <body>
 <div style="text-align: center; vertical-align: top">
