--- a/src/main/webapp/tos.html
+++ b/src/main/webapp/tos.html
@@ -15,19 +15,19 @@
 
 <body>
 <table><tr><td style="width:700px">
-<p class="tosTitle">AggreData Terms and Conditions of Use</p>
+<p class="tosTitle"><strong>TED AggreData</strong> Terms and Conditions of Use</p>
 
 <p class="tosHeader">1. Terms</p>
-<p class="tosBody">By accessing the AggreData, you are agreeing to be bound by these web site Terms and Conditions of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this web site are protected by applicable copyright and trade mark law.
+<p class="tosBody">By accessing <strong>TED AggreData</strong>, you are agreeing to be bound by these Terms and Conditions of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you disagree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this Website are protected by applicable copyright and trade mark law.
 </p>
 
 <p class="tosHeader">2. Use License</p>
 <p class="tosBody">
-Permission is granted to access AggreData for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:<br>
+Permission is granted to access <strong>TED AggreData</strong> for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:<br>
 <ul class="tosBody">
     <li>modify or copy the materials;</li>
     <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-    <li>attempt to decompile or reverse engineer any software contained on The Energy Detective's web site;</li>
+    <li>attempt to decompile or reverse engineer any software contained on The Energy Detective web site;</li>
     <li>remove any copyright or other proprietary notations from the materials; or</li>
     <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
 </ul>
@@ -39,17 +39,17 @@ This license shall automatically terminate if you violate any of these restricti
 
 <p class="tosHeader">3. Beta Trial</p>
 <p class="tosBody">
-This term of service is applicable to the Beta Trial of AggreData. It is also understood that:<br>
+This term of service is applicable to the Beta Trial of <strong>TED AggreData</strong>. It is also understood that:<br>
     <ul class="tosBody">
-        <li>AggreData will be unavailable from time to time so that the system can undergo updates.</li>
-        <li>At the end of the Beta Trial, AggreData will be taken off line and user information will be removed.</li>
+        <li><strong>TED AggreData</strong> will be unavailable from time to time so that the system can undergo updates.</li>
+        <li>At the end of the Beta Trial, <strong>TED AggreData</strong> will be taken off line and user information will be removed.</li>
         <li>Data may be erased during the trial and users may need to re-register as a result of updates.</li>
     </ul>
 </p>
 
 <p class="tosHeader">4. Disclaimer</p>
 <p class="tosBody">
-The materials on The Energy Detective's web site are provided "as is". The Energy Detective makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, The Energy Detective does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
+The materials on The Energy Detective web site are provided "as is". The Energy Detective makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, The Energy Detective does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
 </p>
 
 <p class="tosHeader">5. Limitations</p>
@@ -74,7 +74,7 @@ The Energy Detective may revise these terms of use for its web site at any time 
 
 <p class="tosHeader">9. Governing Law</p>
 <p class="tosBody">
-Any claim relating to The Energy Detective's web site shall be governed by the laws of the State of South Carolina without regard to its conflict of law provisions.
+Any claim relating to The Energy Detective web site shall be governed by the laws of the State of South Carolina without regard to its conflict of law provisions.
 </p>
 
 <p class="tosHeader">10. Privacy Policy</p>
